# E-

./: .gitignore  AUDIT_v0.3.0.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  COMPUTE.md  COMPUTE_PATTERNS.md  Cargo.toml  EA_V2_SPECIFICATION.md  Linux_Testing_Guide.md  README.md  RELEASE_v1.3.md  audit_losses.py
.github/workflows/: ci.yml  (+1 more)
benchmarks/: METHODOLOGY.md  bench_common.py
demo/: inspect_all.sh
docs/: git_setup.md
examples/: byte_ops.ea  conv2d.ea  fma.ea  foreach_fma.ea  foreach_reduction.ea  integer_types.ea  normalize.ea  reduction.ea  reduction_multi_acc.ea  reduction_single.ea  sobel.ea  threshold.ea
integrations/: README.md
integrations/python-extension/: README.md  example.py  kernel.ea  pyproject.toml  setup.py
integrations/python-extension/ea_kernels/: __init__.py
integrations/python-extension/ea_kernels.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: test_arm.sh
src/: bind_cmake.rs  bind_common.rs  bind_cpp.rs  bind_python.rs  bind_pytorch.rs  bind_rust.rs  desugar.rs  error.rs  header.rs  inspect.rs  lib.rs  main.rs  metadata.rs  target.rs
tests/: bind.rs  bind_generators.rs  const_tests.rs  end_to_end.rs  inspect_tests.rs  kernel_advanced_tests.rs  kernel_tests.rs  multi_kernel_tests.rs  output_binding_tests.rs  output_tests.rs  phase10.rs  phase11_errors.rs  phase12.rs  phase13_scatter_gather.rs  phase14_arm.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs  phase8.rs  phase8_ext.rs  phase8_ops.rs  phase8_types.rs  phase9.rs  phase_b.rs  restrict.rs  simd_test  simd_test.ea  static_assert_tests.rs  tail_tests.rs
(+125 files in other folders)
