[package]
name = "ea-compiler"
version = "0.6.0"
edition = "2021"
description = "Eä v2 — SIMD kernel compiler"
authors = ["Peter Lukka <peter.lukka@gmail.com>"]
license = "Apache-2.0"

[dependencies]
logos = { version = "0.13", features = ["export_derive"] }
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "ea_compiler"
path = "src/lib.rs"

[[bin]]
name = "ea"
path = "src/main.rs"

[features]
default = ["llvm"]
llvm = ["inkwell"]
