[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ea-kernels"
version = "0.1.0"
description = "SIMD kernels compiled with the Eä compiler"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
include = ["ea_kernels*"]

[tool.setuptools.package-data]
ea_kernels = ["*.so", "*.dll"]
